tests/ui/parser/removed-syntax/removed-syntax-record.stderr
error: expected type, found `{`
  --> $DIR/removed-syntax-record.rs:1:10
   |
LL | type t = { f: () };
   |          ^ expected type

error: aborting due to 1 previous error

