tests/ui/parser/removed-syntax/removed-syntax-record.rs
type t = { f: () }; //~ ERROR expected type, found `{`
